# ffxiv-tracker

./: .gitignore  Cargo.toml  README.md
ffxiv-tracker/: Cargo.toml
ffxiv-tracker/src/: db.rs  init.sql  job.rs  lib.rs  main.rs  profile.rs
ffxiv-tracker/src/snapshots/: ffxiv_tracker__profile__test__a_a.snap  ffxiv_tracker__profile__test__a_akumatan.snap  ffxiv_tracker__profile__test__ellis_stormcaller.snap  ffxiv_tracker__profile__test__nova_dubois.snap  ffxiv_tracker__profile__test__yov_ziv.snap  ffxiv_tracker__test__ellis_stormcaller.snap  ffxiv_tracker__test__fetch_profile.snap  ffxiv_tracker__test__nova_dubois.snap  ffxiv_tracker__test__yov_ziv.snap  lib__profile__test__a_a.snap  lib__profile__test__a_akumatan.snap  lib__profile__test__ellis_stormcaller.snap  lib__profile__test__nova_dubois.snap  lib__profile__test__yov_ziv.snap
ffxiv-tracker/src/tests/: ellis_stormcaller_jobs.html  ellis_stormcaller_profile.html  nova_dubois_jobs.html  nova_dubois_profile.html  test-profiles.kdl  yov_ziv_jobs.html  yov_ziv_profile.html
src/: lib.rs  profile.rs
src/snapshots/: ffxiv_tracker__test__fetch_profile.snap
src/tests/: yov_ziv_jobs.html  yov_ziv_profile.html
tasks/: Cargo.toml
tasks/src/: main.rs  tests
