[workspace]
members = ["ffxiv-tracker", "tasks"]
resolver = "2"

[workspace.dependencies]
insta = "1.39.0"
scraper = "0.19.0"
strum = { version = "0.26.2", features = ["derive"] }
ureq = "2.9.7"
clap = { version = "4.5.7", features = ["derive"] }
knuffel = "3.2.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
include_dir = "0.7.4"
rusqlite = "0.31.0"
